--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.13",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.73.1"
   },
   "scripts": {
     "start": "react-scripts start",
